docs(design): adopt current pen.dev workflows